# eps-g17-buscador-osint

./: RELATORIO_PRONTIDAO.MD  pyproject.toml
.github/workflows/: ci-cd.yml
